# rust-playground

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  maelstrom_test.sh
.github/workflows/: ci.yml
tutorial-1/: Cargo.toml  README.md
tutorial-1/docs/: 1_reference.md  4_external_dependency.md  5_publish_your_crate.md  cargo_cmd.md  rust_modules.md
tutorial-1/src/: d_main.rs  lecture_06.rs  lecture_09_2.rs  lecture_13.rs  lecture_14.rs  lecture_15.rs  lecture_16-2.rs  lecture_16-3.rs  lecture_17-1.rs  lecture_17-2.rs  lib.rs  main.rs
tutorial-1/src/customer/: mod.rs
tutorial-1/src/lecture_01-05/: lecture_01.rs  lecture_02.rs  lecture_03.rs  lecture_04.rs  lecture_05.rs  lecture_07.rs  lecture_08.rs  lecture_10.rs  lecture_11.rs  lecture_12.rs  lecture_14.rs  lecture_16-1.rs  lecture_17-2.rs  lecture_18-1.rs  lecture_18-2.rs
tutorial-1/src/lecture_06/: lecture-19.rs  lib.rs  main.rs
tutorial-1/src/lecture_07/: lib.rs
tutorial-1/src/lecture_09/: lecture_09_1.rs  lecture_09_3.rs  lecture_09_4.rs  lecture_09_5.rs  lecture_09_6.rs  lecture_09_7.rs  readme.md
tutorial-1/src/lecture_10/: lecture_10_1.rs  lecture_10_2.rs  lecture_10_3.rs  lecture_10_4.rs  lecture_10_5.rs  (+3 more)
tutorial-2/: Cargo.toml  README.md
tutorial-2/docs/: cargo_expand.md  generic.md  lifetme.md  serde_in_rust.md  thread_safe_in_rust.md
tutorial-2/src/: lib.rs  main.rs
tutorial-2/src/broadcast/: broadcast.rs  main.rs  multi_broadcast.rs
tutorial-2/src/echo/: echo.rs  main.rs  mod.rs
tutorial-2/src/grow_only_counter/: main.rs
tutorial-2/src/kafka_style_log/: main.rs
tutorial-2/src/serde_topic/: main.rs  serde_expand.rs
tutorial-2/src/totally_available/: main.rs
tutorial-2/src/unique_id/: main.rs  uid.rs
tutorial-3/: .rustfmt.toml  Cargo.toml  todo.md
tutorial-3/docs/: genesis_block_and_coinbase_transactions.md  miner.md  transactions_note1.md  transactions_note2.md
tutorial-3/src/: README.md  block.rs  hashtable.rs  lib.rs  transactions.rs
tutorial-3/tests/: block_test.rs  output_test.rs  transactions_test.rs
tutorial-4/: README.md
tutorial-4/docs/: 1_environment_deployment.md  7_blockchain_relationship.md  8_blockchain_protocol.md  ipfs.md  protobuf.md  schema.md  workflow.md
tutorial-5/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
tutorial-5/migrations/: 20241129041048_create_key_value_store.sql  20241129061451_alter_key_value_store_value_column.sql  20241217112711_add_eth_prices_table.sql
tutorial-5/src/: caching.rs  db.rs  env.rs  health.rs  key_value_store.rs  lib.rs  main.rs  server.rs
tutorial-5/src/bybit/: bybit.rs  mod.rs
tutorial-5/src/docs/: 1-note-plan.md  1-note.md  10.note-test_context.md  11-note-rust-bin-entry.md  12-note-chains.md  13-note-issuance.md  15-note-geth.md  16-note-ethereum-subscript-events.md  17-event-driven-in-rust.md  2-note-pg.md  3-note-rw-lock.md  4-note-http-header-map.md  5-note-axum.md  6-note-layer-middleware.md  7-note-tokio.md  8-note-eth.md  9.note-bybit.md  note-async.md
tutorial-5/src/eth_prices/: store.rs
tutorial-5/src/execution_chain/: block_range.rs  geth.rs  mod.rs
tutorial-5/src/execution_chain/node/: blocks.rs  decoders.rs  heads.rs  mod.rs  transaction_receipts.rs
tutorial-5/src/mockservices/: mod.rs  rust.rs  web3.rs  world.rs
tutorial-5/src/serve/: caching.rs  health.rs  mod.rs  server.rs
tutorial-5/src/units/: eth.rs  gwei.rs  mod.rs  usd.rs  wei.rs
tutorial-6/: Cargo.toml  README.md
tutorial-6/docs/: 0-ERC-20.md  0-ERC.md  0-Ethereum.md  0.0-ERC-20.md  0.1-EVM.md  1-account.md  2-contract.md  references.md
tutorial-6/src/: lib.rs
tutorial-6/src/accounts/: account.rs
tutorial-6/src/contracts/: contract.rs
tutorial-7/: Cargo.toml  README.md
tutorial-7/docs/: iterator.md  stream.md
tutorial-7/src/: lib.rs
(+19 files in other folders)
