[workspace]
resolver = "2"
members = [
    "tutorial-1",
    "tutorial-2",
    "tutorial-3"
]

[workspace.package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]


[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
opt-level = 's'
strip = "debuginfo"
