[package]
name = "tutorial-2"
version = "0.1.0"
edition = "2021"

[lib]
name = "dist"
path = "src/lib.rs"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "unique_id"
path = "src/unique_id/uid.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast/main.rs"

[[bin]]
name = "grow_only_counter"
path = "src/grow_only_counter/main.rs"

[[bin]]
name = "kafka_style_log"
path = "src/kafka_style_log/main.rs"

[[bin]]
name = "totally_available"
path = "src/totally_available/main.rs"


[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"