[package]
name = "tutorial-2"
version = "0.1.0"
edition = "2021"

[lib]
name = "dist"
path = "src/lib.rs"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "unique_id"
path = "src/unique_id/uid.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast/broadcast.rs"

[[bin]]
name = "multibroadcast"
path = "src/broadcast/multi_broadcast.rs"

[[bin]]
name = "serdewhatnow"
path = "src/serde_topic/main.rs"

[[bin]]
name = "lifetime"
path = "src/lifetime_topic/main.rs"

[[bin]]
name = "generic"
path = "src/generic_topic/main.rs"


[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"
rand = "0.8"