[package]
name = "tutorial-5"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"    # async trait providder 
serde = { version = "1.0", features = ["derive"] } # serialize & deserialize provider 
serde_json = "1.0.107"          # serde json handler 
lazy_static = "1.4.0"
sqlx = { version = "0.7.2", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio-native-tls",
] }
tracing = "0.1"             # log tracer 
tokio = { version = "1", features = ["full"] } 
tracing-subscriber = "0.3"
test-context = "0.1.4"
nanoid = "0.4.0"