[package]
name = "tutorial-5"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"    # async trait providder 
serde = { version = "1.0", features = ["derive"] } # serialize & deserialize provider 
serde_json = "1.0.107"          # serde json handler 
lazy_static = "1.4.0"
sqlx = { version = "0.7.2", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio-native-tls",
] }
tracing = "0.1"             # log tracer 
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = "0.3"
test-context = "0.1.4"
nanoid = "0.4.0"
axum = "0.6.20"
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "1.4.1"
futures = "0.3.28"
reqwest = { version = "0.11.22", features = ["blocking", "json", "gzip"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.49"
hyper = { version = "0.14", features = ["full"] }
backoff = { version = "0.4.0", features = ["tokio"] }
format-url = "0.6.2"