[package]
name = "tutorial-6"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
enum-iterator = "1.4.1"
futures = "0.3.28"
reqwest = { version = "0.11.22", features = ["blocking", "json", "gzip"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] } # serialize & deserialize provider 
serde_json = "1.0.107"          # serde json handler 
tokio = { version = "1", features = ["full"] } 
